Related: tdf#149932 honour PANGO_UNDERLINE_NONE for preedit underline

at least don't show an underline for PANGO_UNDERLINE_NONE

Change-Id: I190f44e1dfb7da1c663ce588973278d0da591c46
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142222
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>